Always show vertical scroll bar
Otherwise it can disappear during user interactions like remove items from the
queue. This makes the page layout reflow when it happens.

--- a/web-frontend/index.html
+++ b/web-frontend/index.html
@@ -9,6 +9,6 @@
   blue for the initial visible portion. Anything that we have to scroll down
   to see has a white bg. -->
   <body class="bg-blue-50">
-    <div id="main"></div>
+    <div id="main" class="overflow-y-scroll"></div>
   </body>
 </html>
